--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <version>2.0.0</version>
   </parent>
   <description>Processing application to detect vessels from S-1 SAR images</description>
-  <version>0.2</version>
+  <version>0.3-SNAPSHOT</version>
   <properties>
     <summary>Processing application to detect vessels from S-1 SAR images</summary>
     <description>Processing application to detect vessels from S-1 SAR images</description>
